kdebase (4:4.3.0-2~pre1) unstable; urgency=low

  +++ Changes by Modestas Vainius:

  * Bump shlibs each new upstream version.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 05 Aug 2009 21:52:54 +0300

kdebase (4:4.3.0-1) unstable; urgency=low

  * New upstream release.

  +++ Changes by Didier Raboud:

  * Add dependency on install-info, thanks to Norbert Preining. (Closes: #532585)

  +++ Changes by Sune Vuorela:
  
  * Make konsole ignore -T. (Closes: #532029)
  * TODO: Sanitycheck that this is a good idea: ^^^^is this done :?

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Bump build depends to >= 4.3.0.
  * Update packaging copyright in debian/copyright.
  * Update to Standards-Version: 3.8.2, no changes required.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 04 Aug 2009 09:05:27 +0200

kdebase (4:4.2.96-1) experimental; urgency=low

  * New upstream snapshot.

  +++ Changes by George Kiagiadakis:

  * Bump build-dependency on kdelibs5 to version 4.2.95.
  * Update installed files.
  * Add myself to uploaders.
  * Add build dependency on kdebase-workspace-dev.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 26 Jun 2009 19:58:54 +0300

kdebase (4:4.2.4-1) unstable; urgency=low

  * New upstream release:
    - khtml fixes. (Closes: #529851)

  +++ Changes by Josh Metzler:

  * Add Breaks: gtk-qt-engine to konqueror-nsplugins since they are
    incompatible. (Closes: #513881)
  * Add konsole as an alternative for x-terminal-emulator. (Closes: #528307)

  +++ Changes by Sune Vuorela:

  * Fix sections.
  * Add Breaks: to konsole to tell that it breaks older versions of yakuake.

  +++ Changes by Fathi Boudra:

  * Bump Standards-Version from 3.8.0 to 3.8.1 (no changes needed).
  * Call update-alternatives without absolute path. (Closes: #510939)
  * Set an higher priority (40) on the x-terminal-emulator alternative.

  +++ Changes by Aurelien Jarno:
